# Chat-Live-OK

./: .dockerignore  .gitignore  CMakeLists.txt  Main.qml  Makefile  README.md  main.cpp
ccvWriter/: .gitignore  CMakeLists.txt  README.md
ccvWriter/config/: app.example.json
ccvWriter/docs/: CLIENT-INTEGRATION.md  DESIGN.md
ccvWriter/resources/: resources.qrc
ccvWriter/scripts/: build-linux.sh  fetch-deps.sh
ccvWriter/src/: main.cpp
ccvWriter/src/api/: ApiClient.cpp  ApiClient.h  ApiError.h  CallsApi.cpp  CallsApi.h  ConversationsApi.cpp  ConversationsApi.h  FriendsApi.cpp  FriendsApi.h  LiveApi.cpp  LiveApi.h  MessagesApi.cpp  MessagesApi.h  UploadsApi.cpp  UploadsApi.h  UsersApi.cpp  UsersApi.h
ccvWriter/src/app/: AppConfig.cpp  AppConfig.h  Application.cpp  Application.h
ccvWriter/src/auth/: OidcClient.cpp  OidcClient.h  TokenStore.cpp  TokenStore.h
ccvWriter/src/call/: CallPeer.cpp  CallPeer.h
ccvWriter/src/domain/: AuthStore.cpp  AuthStore.h  CallsStore.cpp  CallsStore.h  ConversationsStore.cpp  ConversationsStore.h  FriendsStore.cpp  FriendsStore.h  LiveStore.cpp  LiveStore.h  MessagesStore.cpp  MessagesStore.h  Types.h
ccvWriter/src/media/: AudioCapture.cpp  AudioCapture.h  AudioPlayer.cpp  AudioPlayer.h  H264Decoder.cpp  H264Decoder.h  H264Encoder.cpp  H264Encoder.h  OpusCodec.cpp  OpusCodec.h  RtmpPublisher.cpp  RtmpPublisher.h  VideoCapture.cpp  VideoCapture.h
ccvWriter/src/ui/: CallOverlayWidget.cpp  CallOverlayWidget.h  ChatPage.cpp  ChatPage.h  ConversationsPage.cpp  ConversationsPage.h  FriendsPage.cpp  FriendsPage.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  ProfilePage.cpp  ProfilePage.h  VideoRenderer.cpp  VideoRenderer.h
ccvWriter/src/ui/live/: LivePage.cpp  LivePage.h  LiveSquareView.cpp  LiveSquareView.h  LiveStudioView.cpp  LiveStudioView.h  LiveWatchView.cpp  LiveWatchView.h
ccvWriter/src/util/: MediaUrl.cpp  MediaUrl.h
ccvWriter/src/ws/: RealtimeClient.cpp  RealtimeClient.h
client/: README.md
client/desktop/: README.md
client/web/: .env.development  .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
client/web/src/: App.vue  env.d.ts
docker/: Dockerfile.build  Dockerfile.ci  Dockerfile.ubuntu  docker-compose.linux.yml  docker-compose.yml
docs/: CAPTURE_MODULE.md  DESIGN.md  EFFECTS_DESIGN.md  EFFECTS_E3_E6.md  EFFECTS_MODULE.md  README.md
docs/api/: API-Overview.md  Error-Codes.md  REST-Auth-User-Friend.md  REST-Call.md  REST-IM.md  REST-Live.md  WS-Realtime-Protocol.md  WebRTC-Media-Spec.md
docs/architecture/: Auth-Keycloak.md  Data-Model.md  Live-SRS.md  System-Overview.md
docs/product/: Glossary.md  PRD-V1.md
include/libavutil/: ffversion.h
lib/: avutil-60.def  avutil.lib
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavutil.pc  libswscale.pc
media/muxerh264toMp4/: ccvideowriter.cpp  ccvideowriter.h
protocol/: README.md
protocol/asyncapi/: realtime.yaml
protocol/openapi/: common.yaml
qml/: VideoPanel.qml
scripts/: build.ps1  build.sh  dev-down.sh  dev-up.sh  docker-build.ps1  gen-api.sh  init-keycloak-db.sh  run-docker.sh  run.ps1  run.sh
server/: CMakeLists.txt
server/chatlive/: CMakeLists.txt  README.md  main.cpp
server/chatlive/controllers/: CallController.cpp  CallController.h  ConversationController.cpp  ConversationController.h  FriendController.cpp  FriendController.h  LiveController.cpp  LiveController.h  MessageController.cpp  MessageController.h  UploadController.cpp  UploadController.h
server/chatlive/filters/: JwtAuthFilter.cpp  JwtAuthFilter.h
server/chatlive/modules/: OidcTokenValidator.cpp  OidcTokenValidator.h
server/chatlive/services/: CallService.cpp  CallService.h  ConversationService.cpp  ConversationService.h  FriendshipService.cpp  FriendshipService.h  LiveService.cpp  LiveService.h  MessageService.cpp  MessageService.h  MinioService.cpp  MinioService.h  PresenceService.cpp  PresenceService.h  TurnCredentialService.cpp  TurnCredentialService.h  UserService.cpp  UserService.h
server/chatlive/utils/: ApiResponse.cpp  ApiResponse.h
server/chatlive/ws/: WsConnectionContext.h  WsController.cpp  WsController.h  WsEnvelope.cpp  WsEnvelope.h  WsEvent.cpp  WsEvent.h  WsHub.cpp  WsHub.h
server/deploy/: .env.bak.1784224969  .env.example  Dockerfile.chatlive  README.md  docker-compose.yml
server/deploy/coturn/: resolve-turn-conf.sh  turnserver.conf  turnserver.conf.template
server/deploy/keycloak/import/: chatlive-realm.json
server/deploy/mock-auth/: default.conf
server/deploy/nginx/: .gitignore  default.conf  default.conf.bak-restart  gen-dev-cert.sh  obtain-tls-cert.sh  renew-tls-cert.sh  resolve-nginx-tls.sh
server/deploy/nginx/certs/: .gitkeep
server/deploy/nginx/snippets/: chatlive-gateway.conf  ssl-certs.conf
server/deploy/postgres/initdb.d/: 000-keycloak-db.sh
server/deploy/scripts/: clear-stale-calls.sh  sync-keycloak-https.sh
server/deploy/srs/: srs.conf
server/migrations/: 001_init.sql  002_keycloak_auth.sql
server/scripts/: env-local-deps.sh  setup-drogon.sh  smoke-p2.sh  smoke-p4.sh
streaming/call/: CallSessionController.cpp  CallSessionController.h
streaming/capture/: FfmpegAudioCapture.cpp  FfmpegAudioCapture.h  FfmpegCaptureBase.cpp  FfmpegCaptureBase.h  FfmpegDeviceEnumerator.cpp  FfmpegDeviceEnumerator.h  FfmpegDeviceInfo.h  FfmpegPlatformCapture.cpp  FfmpegPlatformCapture.h  FfmpegVideoCapture.cpp  FfmpegVideoCapture.h
streaming/core/: AvFramePtr.h  FramePool.cpp  FramePool.h  MediaTypes.h
streaming/effects/: EffectChain.cpp  EffectChain.h  EffectChainFactory.cpp  EffectChainFactory.h  EffectContext.h  EffectController.cpp  EffectController.h  FfmpegFilterGraph.cpp  FfmpegFilterGraph.h  IVideoEffect.h
streaming/effects/plugins/: BlurEffect.cpp  BlurEffect.h  (+8 more)
streaming/pipeline/: PlayPipeline.cpp  PlayPipeline.h  PublishPipeline.cpp  PublishPipeline.h
streaming/render/: FfmpegVideoRendererBase.cpp  FfmpegVideoRendererBase.h  IVideoFrameSink.h  LocalVideoRenderer.cpp  LocalVideoRenderer.h  RemoteVideoRenderer.cpp  RemoteVideoRenderer.h
(+64 files in other folders)
